--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ScratchOffStats</string>
+    <string name="app_name">Scratch Off Stats</string>
     <string name="action_settings">Settings</string>
     <string name="spentText">Money Spent:</string>
     <string name="wonText">Money Won:</string>
@@ -13,5 +13,8 @@
     <string name="buttonText">Add a Ticket!</string>
     <string name="netText">Tickets Net:</string>
     <string name="clearText">Clear Data</string>
+    <string name="aboutText">About</string>
+    <string name="title_activity_about">AboutActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
